[package]
name = "zenlayer"
version = "1.0.0"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = 'zenlayer'

[dependencies]
# third-party dependencies
clap = { workspace = true }

# substrate primitive dependencies
sp-runtime = { workspace = true, features = ["std"] }

# substrate client dependencies
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-consensus-grandpa = { workspace = true }

# benchmarking dependencies
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }

# zenlayer runtimes
zenlayer-dev-runtime = { workspace = true, features = ["std", "evm-tracing"] }
zenlayer-testnet-runtime = { workspace = true, features = [
	"std",
	"evm-tracing",
] }
zenlayer-mainnet-runtime = { workspace = true, features = [
	"std",
	"evm-tracing",
] }

# zenlayer node specs
zenlayer-common-node = { workspace = true }
zenlayer-dev-node = { workspace = true }
zenlayer-testnet-node = { workspace = true }
zenlayer-mainnet-node = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = []
