[package]
name = "zenlayer-mainnet-constants"
version = "1.0.0"
description = "The substrate runtime constants for zenlayer Node development"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
zenlayer-common-constants = { workspace = true }
# Substrate
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"zenlayer-common-constants/std"
]
